--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pizzos",
   "version": "0.1.0",
   "private": true,
-  "homepage": "pizzos.com",
+  "homepage": "http://pizzos.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
